[package]
name = "icmp-client"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "ICMP Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/icmp-rs"
homepage = "https://github.com/bk-rs/icmp-rs"
documentation = "https://docs.rs/icmp-client"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio"]

impl_async_io = ["async-io"]
impl_tokio = ["tokio"]

[dependencies]
socket2 = { version = "0.5", default-features = false, features = ["all"] }

async-io = { version = "1", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["net"], optional = true }

async-trait = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

icmp-packet = { version = "0.1", path = "../icmp-packet" }

os_info = { version = "3" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
