[package]
name = "icmp-packet"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "ICMP Packet"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/icmp-rs"
homepage = "https://github.com/bk-rs/icmp-rs"
documentation = "https://docs.rs/icmp-packet"
keywords = []
categories = []
readme = "README.md"

[dependencies]
