[package]
name = "icmp-packet"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "ICMP Packet"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/icmp-rs"
homepage = "https://github.com/bk-rs/icmp-rs"
documentation = "https://docs.rs/icmp-packet"
keywords = []
categories = []
readme = "README.md"

[dependencies]
pnet_packet = { version = "0.33", default-features = false }
wrapping-macro = { version = "0.2", default-features = false }

rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
