[package]
name = "async-ping-cli"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Async Ping Cli"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/icmp-rs"
homepage = "https://github.com/bk-rs/icmp-rs"
documentation = "https://docs.rs/async-ping-cli"
keywords = []
categories = []
readme = "README.md"

[[bin]]
name = "async_ping_ping"
path = "src/bin/ping.rs"

[dependencies]
async-ping = { version = "0.2", path = ".." }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

icmp-client = { version = "0.2", features = [
    "impl_tokio",
], path = "../../icmp-client" }

tracing-subscriber = { version = "0.3" }
log = { version = "0.4" }
